--- a/src/content/Carpinteria.html
+++ b/src/content/Carpinteria.html
@@ -19,27 +19,28 @@
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 
-        <style>
-            .whatsapp-button {
-                position: fixed;
-                bottom: 20px;
-                right: 20px;
-                z-index: 100;
-                background-color: #25d366;
-                color: white;
-                border-radius: 50%;
-                width: 60px;
-                height: 60px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-                cursor: pointer;
-            }
-            .whatsapp-button i {
-                font-size: 30px;
-            }
-        </style>
+    <style>
+        .whatsapp-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            z-index: 100;
+            background-color: #25d366;
+            color: white;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            cursor: pointer;
+        }
+
+        .whatsapp-button i {
+            font-size: 30px;
+        }
+    </style>
 </head>
 
 <body>
@@ -138,22 +139,24 @@
             <div class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 sm:py-12 lg:px-8 lg:py-16">
                 <div class="grid grid-cols-1 gap-8 lg:grid-cols-2 lg:gap-16">
                     <div class="relative h-64 overflow-hidden rounded-lg sm:h-80 lg:order-last lg:h-full">
-                        <img alt="" src="/pagina-insyhogar/src/IMG/InstaSimple1.jpg"
+                        <img alt="" src="/pagina-insyhogar/src/IMG/Carpinteria2.jpg"
                             class="absolute inset-0 h-full w-full object-cover" />
                     </div>
 
                     <div class="lg:py-24">
                         <p class="mt-16"></p>
-                        <h2 class="text-3xl font-bold sm:text-4xl"> Servicio Profesional De Instalacion De Muebles De Madera</h2>
+                        <h2 class="text-3xl font-bold sm:text-4xl"> Servicio de Reparación de piezas y objetos. </h2>
 
                         <p class="mt-4 text-gray-600">
 
                         <ul>Nuestros Servicios Incluyen:</ul>
                         <p class="mt-4"></p>
-                        <li>Instalación Profesional de Muebles de Madera</li>
-                        <li>Diseño Personalizado para Adaptarse a tus Necesidades.</li>
-                        <li> Asesoramiento Profesional para Maximizar el Espacio y la Funcionalidad.</li>
-                        <li> Materiales de Alta Calidad y Durabilidad Garantizada.</li>
+                        <li>Reparación de sillas, mesas, escritorios y otros muebles de madera</li>
+                        <li>Restauración de muebles antiguos y vintage</li>
+                        <li>Ajustes y refuerzos estructurales</li>
+                        <li> Reemplazo de piezas dañadas o faltantes</li>
+                        <li>Reparación de armarios, puertas y ventanas de madera</li>
+                        <li>Soluciones a medida para cualquier tipo de proyecto de carpintería</li>
 
                         </p>
 
@@ -170,21 +173,27 @@
             <div class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 sm:py-12 lg:px-8 lg:py-16">
                 <div class="grid grid-cols-1 gap-8 lg:grid-cols-2 lg:gap-16">
                     <div class="relative h-64 overflow-hidden rounded-lg sm:h-80 lg:order-last lg:h-full">
-                        <img alt="" src="/pagina-insyhogar/src/IMG/InstaSimple2.jpg"
+                        <img alt="" src="/pagina-insyhogar/src/IMG/Carpinteria3.jpg"
                             class="absolute inset-0 h-full w-full object-cover" />
                     </div>
 
                     <div class="lg:py-24">
-                        <h2 class="text-3xl font-bold sm:text-4xl">Servicios de Instalación de Cabinas para Ducha:</h2>
+                        <h2 class="text-3xl font-bold sm:text-4xl">Servicios de Diseño de Estructuras.</h2>
 
                         <p class="mt-4 text-gray-600">
                         <ul>Nuestros Servicios Incluyen:</ul>
                         <p class="mt-4"></p>
-                        <li>Expertos en instalación de cabinas para ducha de alta calidad.</li>
-                        <li>Personalización según tus preferencias y espacio disponible.</li>
-                        <li>Profesionales capacitados para garantizar resultados impecables.</li>
-                        <li>Calidad y durabilidad en todos nuestros productos.</li>
-                        
+                        <li>Diseño de Estructuras de Madera: Desde pérgolas y terrazas hasta escaleras y muebles a
+                            medida, nuestros diseños están pensados para realzar cualquier espacio.</li>
+                        <li>Consultoría y Asesoramiento: Trabajamos estrechamente con nuestros clientes para entender
+                            sus necesidades y proporcionar soluciones innovadoras y prácticas.</li>
+                        <li>Planos Detallados: Proveemos planos técnicos detallados que aseguran una construcción
+                            precisa y eficiente.
+                        </li>
+                        <li>Selección de Materiales: Ofrecemos orientación en la selección de los mejores materiales
+                            para cada proyecto, asegurando la combinación perfecta de estética y resistencia.</li>
+                        <li>Visualización 3D: Utilizamos tecnologías avanzadas para crear modelos en 3D que permiten a
+                            nuestros clientes visualizar el resultado final antes de comenzar la construcción.</li>
 
 
 
@@ -204,23 +213,27 @@
             <div class="mx-auto max-w-screen-xl px-4 py-8 sm:px-6 sm:py-12 lg:px-8 lg:py-16">
                 <div class="grid grid-cols-1 gap-8 lg:grid-cols-2 lg:gap-16">
                     <div class="relative h-64 overflow-hidden rounded-lg sm:h-80 lg:order-last lg:h-full">
-                        <img alt="" src="/pagina-insyhogar/src/IMG/InstaSimple3.jpg"
+                        <img alt="" src="/pagina-insyhogar/src/IMG/Carpinteria1.jpg"
                             class="absolute inset-0 h-full w-full object-cover" />
                     </div>
 
                     <div class="lg:py-24">
-                        <h2 class="text-3xl font-bold sm:text-4xl">Instalación Profesional de Centros de Entretenimiento y Aires Acondicionados</h2>
+                        <h2 class="text-3xl font-bold sm:text-4xl"> Servicios Profesionales de Carpintería. </h2>
 
                         <p class="mt-4 text-gray-600">
 
                         <ul>Nuestros servicios incluyen:</ul>
                         <p class="mt-4"></p>
-                        <li>Instalación de Centros de Entretenimiento de última generación.</li>
-                        <li>Asesoramiento personalizado para optimizar tu espacio y experiencia.</li>
-                        <li>Instalación de Sistemas de Sonido envolvente para una experiencia de cine en casa.</li>
-                        <li>Soluciones de montaje para televisores de cualquier tamaño.</li>
-                        <li>Instalación de Aires Acondicionados eficientes y de alta calidad.</li>
-                        <li>Mantenimiento y reparación de equipos existentes.</li>
+                        <li>Muebles Personalizados: Desde mesas y sillas hasta estanterías y armarios, diseñamos y
+                            fabricamos muebles que se adaptan perfectamente a tu espacio y estilo.</li>
+                        <li>Proyectos de Interiorismo: Colaboramos contigo para crear ambientes acogedores y
+                            funcionales, aportando soluciones creativas y prácticas.</li>
+                        <li>Carpintería Residencial y Comercial: Ofrecemos servicios tanto para el hogar como para
+                            negocios, desde pequeños arreglos hasta grandes proyectos.</li>
+                        <li>Reparaciones y Restauraciones: Devolvemos la vida a tus muebles y estructuras de madera
+                            antiguas con nuestras técnicas de restauración expertas.</li>
+                        <li>Accesorios y Decoraciones: Diseñamos y fabricamos una variedad de objetos decorativos y
+                            funcionales, como marcos, estantes flotantes, y más.</li>
 
 
 
