--- a/src/content/index.html
+++ b/src/content/index.html
@@ -47,86 +47,7 @@
 <body>
 
     <header>
-        <div class="relative">
-            <label for="Search" class="sr-only">Buscar</label>
-
-            <input type="text" id="Search" placeholder="Search for..."
-                class="w-full rounded-md border-gray-200 py-2.5 pe-10 shadow-sm sm:text-sm" />
-
-            <span class="absolute inset-y-0 end-0 flex items-center pr-3">
-                <button type="button" class="text-gray-600 hover:text-gray-700">
-                    <span class="sr-only">Buscar</span>
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="h-4 w-4">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
-                    </svg>
-                </button>
-            </span>
-        </div>
-
-        <a href="https://wa.me/573208443691" target="_blank" class="whatsapp-button">
-            <i class="bi bi-whatsapp"></i>
-        </a>       
-        <div>
-            <img src="/src/IMG/logo-insy.jpg" class="absolute inset-0 object-cover w-full h-full" alt="" />
-            <div class="relative bg-gray-900 bg-opacity-75">
-                <div class="px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20">
-                    <div class="flex flex-col items-center justify-between xl:flex-row">
-                        <div class="w-full max-w-xl mb-12 xl:mb-0 xl:pr-16 xl:w-7/12">
-                            <h2
-                                class="max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight text-blue-700  sm:text-4xl sm:leading-none">
-                                INSYHOGAR<br class="hidden md:block" />
-                                SOBRE LA EMPRESA: <span class="text-teal-accent-400"></span>
-                            </h2>
-                            <p class="max-w-xl mb-4 text-base text-white md:text-lg">
-                                Ofrecemos servicios profesionales que están orientados a bservar los cambios y
-                                movimientos en el
-                                mundo de la construccion y el mobiliario, para así ofrecer a nuestros clientes las
-                                últimas tendencias.
-                            </p>
-                        </div>
-                        <div class="w-full max-w-xl xl:px-8 xl:w-5/12">
-                            <div class="bg-white rounded shadow-2xl p-7 sm:p-10">
-                                <h3 class="mb-4 text-xl font-semibold sm:text-center sm:mb-6 sm:text-2xl">
-                                    SUBSCRIBETE
-                                </h3>
-                                <form>
-                                    <div class="mb-1 sm:mb-2">
-                                        <label for="firstName" class="inline-block mb-1 font-medium">NOMBRE</label>
-                                        <input placeholder="FERNANDO" required="" type="text"
-                                            class="flex-grow w-full h-12 px-4 mb-2 transition duration-200 bg-white border border-gray-300 rounded shadow-sm appearance-none focus:border-deep-purple-accent-400 focus:outline-none focus:shadow-outline"
-                                            id="firstName" name="firstName" />
-                                    </div>
-                                    <div class="mb-1 sm:mb-2">
-                                        <label for="lastName" class="inline-block mb-1 font-medium">APELLIDOS</label>
-                                        <input placeholder="ZAPATA" required="" type="text"
-                                            class="flex-grow w-full h-12 px-4 mb-2 transition duration-200 bg-white border border-gray-300 rounded shadow-sm appearance-none focus:border-deep-purple-accent-400 focus:outline-none focus:shadow-outline"
-                                            id="lastName" name="lastName" />
-                                    </div>
-                                    <div class="mb-1 sm:mb-2">
-                                        <label for="email" class="inline-block mb-1 font-medium">CORREO</label>
-                                        <input placeholder="fernando.doe@example.org" required="" type="text"
-                                            class="flex-grow w-full h-12 px-4 mb-2 transition duration-200 bg-white border border-gray-300 rounded shadow-sm appearance-none focus:border-deep-purple-accent-400 focus:outline-none focus:shadow-outline"
-                                            id="email" name="email" />
-                                    </div>
-                                    <div class="mt-4 mb-2 sm:mb-4">
-                                        <button type="submit"
-                                            class="inline-flex items-center justify-center w-full h-12 px-6 font-medium tracking-wide text-gray-700 transition duration-200 rounded shadow-md bg-deep-purple-accent-400 hover:bg-deep-purple-accent-700 focus:shadow-outline focus:outline-none">
-                                            ENVIAR
-                                        </button>
-                                    </div>
-                                    <p class="text-xs text-gray-400 sm:text-sm">
-                                        Valoramos su privacidad y estamos comprometidos con la proteccion de sus datos
-                                        personales.
-                                    </p>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
 
 
 
@@ -186,7 +107,7 @@
                 <a href="./Plomeria.html" aria-label="View Item">
                     <div
                         class="relative overflow-hidden transition duration-200 transform rounded shadow-lg hover:-translate-y-2 hover:shadow-2xl">
-                        <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="/src/IMG/plomeros.jpg"
+                        <img class="object-cover w-full h-56 md:h-64 xl:h-80" src="/pagina-insyhogar/src/IMG/plomeros.jpg"
                             alt="PLOMERIA" />
                         <div class="absolute inset-x-0 bottom-0 px-6 py-4 bg-black bg-opacity-75">
                             <p class="text-sm font-medium tracking-wide text-white">
